[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Coin.gd" type="Script" id=1]
[ext_resource path="res://resources/spine-skeletons/coin-pro/coin_dataresource.tres" type="SpineSkeletonDataResource" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.75, 37.5 )

[node name="NormalCoin" type="Node2D" groups=["Coins"]]
script = ExtResource( 1 )

[node name="Coin" type="SpineSprite" parent="."]
scale = Vector2( 0.2, 0.2 )
skeleton_data_res = ExtResource( 2 )
preview_skin = "Default"
preview_animation = "idle_normal"
preview_frame = false
preview_time = 0.0

[node name="AreaToGetCoin" type="Area2D" parent="."]
position = Vector2( 1, 0 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaToGetCoin"]
shape = SubResource( 3 )

[connection signal="animation_completed" from="Coin" to="." method="_on_Coin_animation_completed"]
[connection signal="body_entered" from="AreaToGetCoin" to="." method="_on_Area2D_body_entered"]
